EF Core Entities added
Ugh. Where should they live? Don't really like putting some of these in ..Core since they exist only for relational mapping.

--- a/SailScores.Web/SailScores.Web.csproj
+++ b/SailScores.Web/SailScores.Web.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\SailScores.Database\SailScores.Database.csproj" />
     <ProjectReference Include="..\SailScores.Identity\SailScores.Identity.csproj" />
   </ItemGroup>
 
