Service gets Context

--- a/SailScores.Core/SailScores.Core.csproj
+++ b/SailScores.Core/SailScores.Core.csproj
@@ -5,9 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Interfaces\" />
     <Folder Include="Model\" />
-    <Folder Include="Services\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SailScores.Database\SailScores.Database.csproj" />
   </ItemGroup>
 
   <ItemGroup>
