--- a/SailScores.Web/appsettings.json
+++ b/SailScores.Web/appsettings.json
@@ -7,5 +7,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtKey": "SOME_RANDOM_KEY_DO_NOT_SHARE",
+  "JwtIssuer": "http://yourdomain.com",
+  "JwtExpireDays": 30
 }
