localhost webcall experiment

--- a/Sailscores.Client.Uwp/Sailscores.Client.Uwp.csproj
+++ b/Sailscores.Client.Uwp/Sailscores.Client.Uwp.csproj
@@ -89,6 +89,7 @@
     <UseDotNetNativeToolchain>true</UseDotNetNativeToolchain>
   </PropertyGroup>
   <ItemGroup>
+    <Content Include="Assets\localhost.crt" />
     <None Include="Hamburger_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
