--- a/Sailscores.Client.Uwp/Sailscores.Client.Uwp.csproj
+++ b/Sailscores.Client.Uwp/Sailscores.Client.Uwp.csproj
@@ -97,6 +97,7 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\SailscoresServerService.cs" />
     <Compile Include="Services\SettingsServices\SettingsService.cs" />
     <Compile Include="ViewModels\MainPageViewModel.cs" />
     <Compile Include="ViewModels\DetailPageViewModel.cs" />
