WIP: DTOs and API controllers

--- a/SailScores.Web/SailScores.Web.csproj
+++ b/SailScores.Web/SailScores.Web.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <Folder Include="Areas\Api\Data\" />
+    <Folder Include="Areas\Api\Models\" />
     <Folder Include="Areas\Api\Views\" />
     <Folder Include="Data\" />
     <Folder Include="wwwroot\lib\" />
