--- a/Sailscores.Client.Uwp/Sailscores.Client.Uwp.csproj
+++ b/Sailscores.Client.Uwp/Sailscores.Client.Uwp.csproj
@@ -102,7 +102,7 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\SailscoresServerService.cs" />
+    <Compile Include="Services\SailScoresServerService.cs" />
     <Compile Include="Services\SettingsServices\IUwpSettings.cs" />
     <Compile Include="Services\SettingsServices\SettingsService.cs" />
     <Compile Include="TaskHelpers\NotifyTaskCompletion.cs" />
@@ -231,7 +231,7 @@
       <Version>2.0.0</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
-      <Version>9.0.1</Version>
+      <Version>12.0.1</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
