--- a/SailScores.ApiClient/SailScores.Api.csproj
+++ b/SailScores.ApiClient/SailScores.Api.csproj
@@ -6,10 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\SailScores.Core\SailScores.Core.csproj" />
+    <PackageReference Include="System.ComponentModel.Annotations" Version="4.5.0" />
   </ItemGroup>
 
 </Project>
