--- a/Sailscores.Utility/Sailscores.Utility.csproj
+++ b/Sailscores.Utility/Sailscores.Utility.csproj
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SailScores.ApiClient\SailScores.ApiClient.csproj" />
+    <ProjectReference Include="..\SailScores.ApiClient\SailScores.Api.csproj" />
     <ProjectReference Include="..\SailScores.Core\SailScores.Core.csproj" />
     <ProjectReference Include="..\SailScores.Database\SailScores.Database.csproj" />
     <ProjectReference Include="..\Sailscores.ImportExport\SailScores.ImportExport.csproj" />
