--- a/SailScores.Web/package.json
+++ b/SailScores.Web/package.json
@@ -8,10 +8,11 @@
     "merge-stream": "1.0.1",
     "gulp-uglify": "~1.5.3",
     "gulp-concat": "~2.6.0",
-    "gulp-cssmin": "0.2.0"
+    "gulp-cssmin": "0.2.0",
+    "gulp-sass": "4.0.2"
   },
   "dependencies": {
-    "bootstrap": "4.1.3",
+    "bootstrap": "4.2.1",
     "jquery": "~3.3.1",
     "popper.js": "1.12.9"
   }
