fix import issues with null Sail#

--- a/SailScores.Web/SailScores.Web.csproj
+++ b/SailScores.Web/SailScores.Web.csproj
@@ -44,4 +44,10 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="SailScores.Web.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
