--- a/SailScores.Web/Scripts/tsconfig.json
+++ b/SailScores.Web/Scripts/tsconfig.json
@@ -4,7 +4,14 @@
     "noEmitOnError": true,
     "removeComments": false,
     "sourceMap": true,
-    "target": "es5"
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "target": "es5",
+    "lib": [
+      "es2015",
+      "es5",
+      "dom"
+    ]
   },
   "files": [
     "./raceEditor.ts"
