--- a/SailScores.Web/package.json
+++ b/SailScores.Web/package.json
@@ -4,16 +4,24 @@
   "private": true,
   "devDependencies": {
     "gulp": "4.0.0",
-    "rimraf": "2.6.3",
-    "merge-stream": "1.0.1",
-    "gulp-uglify": "3.0.1",
     "gulp-concat": "2.6.1",
     "gulp-cssmin": "0.2.0",
-    "gulp-sass": "4.0.2"
+    "gulp-sass": "4.0.2",
+    "gulp-uglify": "3.0.1",
+    "merge-stream": "1.0.1",
+    "rimraf": "2.6.3",
+    "typescript": "3.3.1",
+    "ts-loader": "5.3.3",
+    "webpack": "4.2.0",
+    "webpack-cli": "^3.2.1"
   },
   "dependencies": {
     "bootstrap": "4.2.1",
     "jquery": "~3.3.1",
     "popper.js": "1.14.7"
+  },
+  "scripts": {
+    "build": "webpack"
   }
+, "-vs-binding":{"AfterBuild":["build"]}
 }
