--- a/.gitignore
+++ b/.gitignore
@@ -277,3 +277,5 @@ SailScores\.Web/wwwroot/js/
 SailScores\.Web/Scripts/guid\.js\.map
 
 SailScores\.Web/Scripts/guid\.js
+
+SailScores\.Web/wwwroot/css/custom\.css
