--- a/SailScores.Web/package.json
+++ b/SailScores.Web/package.json
@@ -13,13 +13,15 @@
     "typescript": "3.3.1",
     "ts-loader": "5.3.3",
     "webpack": "4.2.0",
-    "webpack-cli": "^3.2.1"
+    "webpack-cli": "^3.2.1",
+    "@types/jquery": "3.3.29"
   },
   "dependencies": {
     "bootstrap": "4.2.1",
     "jquery": "~3.3.1",
     "popper.js": "1.14.7",
-    "dragula": "3.7.2"
+    "dragula": "3.7.2",
+    "devbridge-autocomplete": "1.4.9"
   },
   "scripts": {
     "build": "webpack"
