WIP: Kinda working autocomplete

--- a/SailScores.Web/Scripts/tsconfig.json
+++ b/SailScores.Web/Scripts/tsconfig.json
@@ -17,7 +17,8 @@
     "files": [
       "./guid.ts",
       "./raceEditor.ts",
-      "./interfaces/CompetitorDto.cs.d.ts"
+      "./interfaces/CompetitorDto.cs.d.ts",
+      "./jquery.autocomplete.d.ts"
 
     ]
   }
