--- a/SailScores.Web/package.json
+++ b/SailScores.Web/package.json
@@ -14,7 +14,8 @@
     "ts-loader": "5.3.3",
     "webpack": "4.2.0",
     "webpack-cli": "^3.2.1",
-    "@types/jquery": "3.3.29"
+    "@types/jquery": "3.3.29",
+    "@types/dragula": "2.1.34"
   },
   "dependencies": {
     "bootstrap": "4.2.1",
