--- a/SailScores.ApiClient/SailScores.Api.csproj
+++ b/SailScores.ApiClient/SailScores.Api.csproj
@@ -14,6 +14,10 @@
       <Generator>DtsGenerator</Generator>
       <LastGenOutput>CompetitorDto.cs.d.ts</LastGenOutput>
     </Compile>
+    <Compile Update="Dtos\ScoreCodeDto.cs">
+      <Generator>DtsGenerator</Generator>
+      <LastGenOutput>ScoreCodeDto.cs.d.ts</LastGenOutput>
+    </Compile>
   </ItemGroup>
 
 </Project>
