--- a/SailScores.Web/appsettings.Development.json
+++ b/SailScores.Web/appsettings.Development.json
@@ -1,9 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
+  "Serilog": {
+    "MinimumLevel": {
+      "Override": {
+        "Default": "Debug",
+        "System": "Information",
+        "Microsoft": "Information"
+      }
     }
   }
 }
