--- a/SailScores.Web/appsettings.json
+++ b/SailScores.Web/appsettings.json
@@ -2,13 +2,28 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=SailScores5;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
   "AllowedHosts": "*",
   "JwtKey": "SOME_RANDOM_KEY_DO_NOT_SHARE",
   "JwtIssuer": "http://yourdomain.com",
-  "JwtExpireDays": 30
+  "JwtExpireDays": 30,
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "MSSqlServer",
+        "Args": {
+          "connectionString": "Server=localhost;Database=SailScores5;Trusted_Connection=True;MultipleActiveResultSets=true",
+          "tableName": "Logs",
+          "autoCreateSqlTable": true
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
+  }
 }
