Change default logging level

--- a/SailScores.Web/appsettings.json
+++ b/SailScores.Web/appsettings.json
@@ -8,7 +8,7 @@
   "JwtExpireDays": 30,
   "Serilog": {
     "MinimumLevel": {
-      "Default": "Debug",
+      "Default": "Warning",
       "Override": {
         "Microsoft": "Warning",
         "System": "Warning"
