Add setting for ssl port
Couldn't be detected in IIS

--- a/SailScores.Web/appsettings.json
+++ b/SailScores.Web/appsettings.json
@@ -6,6 +6,7 @@
   "JwtKey": "SOME_RANDOM_KEY_DO_NOT_SHARE",
   "JwtIssuer": "http://yourdomain.com",
   "JwtExpireDays": 30,
+  "sslPort": "NotSet",
   "Serilog": {
     "MinimumLevel": {
       "Default": "Warning",
