WIP: Minify fixes
and some content changes

--- a/SailScores.Web/package.json
+++ b/SailScores.Web/package.json
@@ -8,6 +8,7 @@
     "gulp-cssmin": "0.2.0",
     "gulp-sass": "4.0.2",
     "gulp-uglify": "3.0.1",
+    "gulp-uglify-es": "1.0.4",
     "merge-stream": "1.0.1",
     "rimraf": "2.6.3",
     "typescript": "3.3.1",
