ignore Sonar files

--- a/.gitignore
+++ b/.gitignore
@@ -279,3 +279,5 @@ SailScores\.Web/Scripts/guid\.js\.map
 SailScores\.Web/Scripts/guid\.js
 
 SailScores\.Web/wwwroot/css/custom\.css
+
+\.sonarqube/
