Color top three in series
closes #4

--- a/SailScores.Web/appsettings.json
+++ b/SailScores.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=SailScores5;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost;Database=sailscores;User Id=sa;password=P@ssw0rd;MultipleActiveResultSets=true"
   },
   "AllowedHosts": "*",
   "JwtKey": "SOME_RANDOM_KEY_DO_NOT_SHARE",
@@ -19,7 +19,7 @@
       {
         "Name": "MSSqlServer",
         "Args": {
-          "connectionString": "Server=localhost;Database=SailScores5;Trusted_Connection=True;MultipleActiveResultSets=true",
+          "connectionString": "Server=localhost;Database=sailscores;Trusted_Connection=True;MultipleActiveResultSets=true",
           "tableName": "Logs",
           "autoCreateSqlTable": true
         }
