Historical Results WIP

--- a/SailScores.Web/appsettings.json
+++ b/SailScores.Web/appsettings.json
@@ -19,7 +19,7 @@
       {
         "Name": "MSSqlServer",
         "Args": {
-          "connectionString": "Server=localhost;Database=sailscores;Trusted_Connection=True;MultipleActiveResultSets=true",
+          "connectionString": "Server=localhost;Database=sailscores;User Id=sa;password=P@ssw0rd;MultipleActiveResultSets=true",
           "tableName": "Logs",
           "autoCreateSqlTable": true
         }
