--- a/SailScores.Web/Scripts/tsconfig.json
+++ b/SailScores.Web/Scripts/tsconfig.json
@@ -18,7 +18,7 @@
       "./guid.ts",
       "./raceEditor.ts",
       "./interfaces/CompetitorDto.cs.d.ts",
-      "./jquery.autocomplete.d.ts"
-
+      "./jquery.autocomplete.d.ts",
+      "./bootstrap-select.d.ts"
     ]
   }
