--- a/SailScores.Web/appsettings.json
+++ b/SailScores.Web/appsettings.json
@@ -12,7 +12,8 @@
       "Default": "Warning",
       "Override": {
         "Microsoft": "Warning",
-        "System": "Warning"
+        "System": "Warning",
+        "Microsoft.AspNetCore.Hosting.Internal.WebHost": "Information"
       }
     },
     "WriteTo": [
@@ -22,6 +23,14 @@
           "connectionString": "Server=localhost;Database=sailscores;User Id=sa;password=P@ssw0rd;MultipleActiveResultSets=true",
           "tableName": "Logs",
           "autoCreateSqlTable": true
+        }
+      }
+    ],
+    "Filter": [
+      {
+        "Name": "ByIncludingOnly",
+        "Args": {
+          "expression": "( EventId.Id = 2 ) or ( SourceContext <> 'Microsoft.AspNetCore.Hosting.Internal.WebHost' ) "
         }
       }
     ],
