--- a/SailScores.Web/package.json
+++ b/SailScores.Web/package.json
@@ -15,13 +15,13 @@
     "ts-loader": "5.3.3",
     "webpack": "4.2.0",
     "webpack-cli": "^3.2.1",
-    "@types/jquery": "3.3.29",
+    "@types/jquery": "3.4.1",
     "@types/dragula": "2.1.34",
     "@types/bootstrap-select": "1.11.1"
   },
   "dependencies": {
     "bootstrap": "4.3.1",
-    "jquery": "~3.3.1",
+    "jquery": "3.4.1",
     "jquery-validate": "2.0.0",
     "popper.js": "1.14.7",
     "dragula": "3.7.2",
