--- a/SailScores.Web/package.json
+++ b/SailScores.Web/package.json
@@ -3,6 +3,9 @@
   "name": "asp.net",
   "private": true,
   "devDependencies": {
+    "@types/bootstrap-select": "1.11.1",
+    "@types/dragula": "2.1.34",
+    "@types/jquery": "3.3.29",
     "gulp": "4.0.0",
     "gulp-concat": "2.6.1",
     "gulp-cssmin": "0.2.0",
@@ -11,13 +14,10 @@
     "gulp-uglify-es": "1.0.4",
     "merge-stream": "1.0.1",
     "rimraf": "2.6.3",
-    "typescript": "3.3.1",
     "ts-loader": "5.3.3",
+    "typescript": "3.3.1",
     "webpack": "4.2.0",
-    "webpack-cli": "^3.2.1",
-    "@types/jquery": "3.4.1",
-    "@types/dragula": "2.1.34",
-    "@types/bootstrap-select": "1.11.1"
+    "webpack-cli": "^3.3.2"
   },
   "dependencies": {
     "bootstrap": "4.3.1",
