Reduce serilog levels

--- a/SailScores.Web/appsettings.json
+++ b/SailScores.Web/appsettings.json
@@ -9,12 +9,7 @@
   "sslPort": "NotSet",
   "Serilog": {
     "MinimumLevel": {
-      "Default": "Warning",
-      "Override": {
-        "Microsoft": "Warning",
-        "System": "Warning",
-        "Microsoft.AspNetCore.Hosting.Internal.WebHost": "Information"
-      }
+      "Default": "Warning"
     },
     "WriteTo": [
       {
@@ -23,14 +18,6 @@
           "connectionString": "Server=localhost;Database=sailscores;User Id=sa;password=P@ssw0rd;MultipleActiveResultSets=true",
           "tableName": "Logs",
           "autoCreateSqlTable": true
-        }
-      }
-    ],
-    "Filter": [
-      {
-        "Name": "ByIncludingOnly",
-        "Args": {
-          "expression": "( EventId.Id = 2 ) or ( SourceContext <> 'Microsoft.AspNetCore.Hosting.Internal.WebHost' ) "
         }
       }
     ],
