DB Changes to support Hierarchy
of Scoring Systems

--- a/SailScores.Web/appsettings.json
+++ b/SailScores.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=sailscores;User Id=sa;password=P@ssw0rd;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost;Database=scoringsys;User Id=sa;password=P@ssw0rd;MultipleActiveResultSets=true"
   },
   "AllowedHosts": "*",
   "JwtKey": "SOME_RANDOM_KEY_DO_NOT_SHARE",
@@ -15,7 +15,7 @@
       {
         "Name": "MSSqlServer",
         "Args": {
-          "connectionString": "Server=localhost;Database=sailscores;User Id=sa;password=P@ssw0rd;MultipleActiveResultSets=true",
+          "connectionString": "Server=localhost;Database=scoringsys;User Id=sa;password=P@ssw0rd;MultipleActiveResultSets=true",
           "tableName": "Logs",
           "autoCreateSqlTable": true
         }
