WIP: MailKit for email

--- a/SailScores.Web/appsettings.json
+++ b/SailScores.Web/appsettings.json
@@ -22,5 +22,11 @@
       }
     ],
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
+  },
+  "EmailConfiguration": {
+    "SmtpServer": "m06.internetmailserver.net",
+    "SmtpPort": 25,
+    "SmtpFromAddress": "info@sailscores.com"
   }
+
 }
