Mail and series update bug

--- a/SailScores.Web/appsettings.json
+++ b/SailScores.Web/appsettings.json
@@ -24,9 +24,11 @@
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
   },
   "EmailConfiguration": {
-    "SmtpServer": "m06.internetmailserver.net",
+    "SmtpServer": "mailserver",
     "SmtpPort": 25,
-    "SmtpFromAddress": "info@sailscores.com"
+    "SmtpFromAddress": "info@sailscores.com",
+    "SmtpUserName": "info@sailscores.com",
+    "SmtpPassword": "password"
   }
 
 }
