--- a/SailScores.Web/package.json
+++ b/SailScores.Web/package.json
@@ -8,7 +8,7 @@
     "@types/jquery": "3.3.29",
     "gulp": "4.0.0",
     "gulp-concat": "2.6.1",
-    "gulp-cssmin": "0.2.0",
+    "gulp-clean-css": "4.2.0",
     "gulp-sass": "4.0.2",
     "gulp-uglify": "3.0.1",
     "gulp-uglify-es": "1.0.4",
@@ -17,7 +17,7 @@
     "ts-loader": "5.3.3",
     "typescript": "3.3.1",
     "webpack": "4.2.0",
-    "webpack-cli": "^3.3.2"
+    "webpack-cli": "^3.3.5"
   },
   "dependencies": {
     "bootstrap": "4.3.1",
