WIP: Regatta Controller

--- a/SailScores.Web/SailScores.Web.csproj
+++ b/SailScores.Web/SailScores.Web.csproj
@@ -42,6 +42,7 @@
     <Folder Include="Areas\Api\Models\" />
     <Folder Include="Areas\Api\Views\" />
     <Folder Include="Data\" />
+    <Folder Include="Views\Regatta\" />
     <Folder Include="wwwroot\lib\" />
   </ItemGroup>
 
