--- a/SailScores.Web/SailScores.Web.csproj
+++ b/SailScores.Web/SailScores.Web.csproj
@@ -13,6 +13,9 @@
   <PropertyGroup>
     <ServerGarbageCollection>false</ServerGarbageCollection>
   </PropertyGroup>
+  <ItemGroup>
+    <Content Remove="Views\Race\_scoreEntryPartial.cshtml" />
+  </ItemGroup>
 
   <ItemGroup>
     <None Remove="Scripts\guid.ts" />
@@ -46,6 +49,10 @@
     <Folder Include="Areas\Api\Views\" />
     <Folder Include="Data\" />
     <Folder Include="wwwroot\lib\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Views\Race\_scoreEntryPartial.cshtml" />
   </ItemGroup>
 
   <ItemGroup>
