--- a/SailScores.Web/SailScores.Web.csproj
+++ b/SailScores.Web/SailScores.Web.csproj
@@ -46,6 +46,7 @@
     <Folder Include="Areas\Api\Models\" />
     <Folder Include="Areas\Api\Views\" />
     <Folder Include="Data\" />
+    <Folder Include="Views\Error\" />
     <Folder Include="wwwroot\lib\" />
   </ItemGroup>
 
