--- a/SailScores.Web/package.json
+++ b/SailScores.Web/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "4.3.1",
     "jquery": "3.4.1",
     "jquery-validate": "2.0.0",
+    "jquery-ajax-unobtrusive": "3.2.6",
     "popper.js": "1.14.7",
     "dragula": "3.7.2",
     "devbridge-autocomplete": "1.4.10",
