Club Request page and processing

--- a/SailScores.Web/appsettings.json
+++ b/SailScores.Web/appsettings.json
@@ -29,6 +29,7 @@
     "SmtpFromAddress": "info@sailscores.com",
     "SmtpUserName": "info@sailscores.com",
     "SmtpPassword": "password"
-  }
+  },
+  "NotificationEmail": "info@sailscores.com"
 
 }
