--- a/SailScores.Core/SailScores.Core.csproj
+++ b/SailScores.Core/SailScores.Core.csproj
@@ -23,6 +23,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="2.2.0" />
     <PackageReference Include="Serilog" Version="2.8.0" />
   </ItemGroup>
 
