Set up CI with Azure Pipelines
[skip ci]
Case changes


removing projects for Azure auto build on linux


removing type def files


Figuring out TS Types


trying more


Throwing spaghetti at the wall


this seems promising...


jquery fun


who knows?


I think so!


Update azure-pipelines.yml for Azure Pipelines
ugh.


getting closer


oops. this is what I meant.


Update azure-pipelines.yml for Azure Pipelines
Update azure-pipelines.yml for Azure Pipelines
Update azure-pipelines.yml for Azure Pipelines
Update azure-pipelines.yml for Azure Pipelines

--- a/SailScores.ImportExport.Test/SailScores.ImportExport.Test.csproj
+++ b/SailScores.ImportExport.Test/SailScores.ImportExport.Test.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Sailscores.ImportExport\SailScores.ImportExport.csproj" />
+    <ProjectReference Include="..\SailScores.ImportExport\SailScores.ImportExport.csproj" />
   </ItemGroup>
 
 </Project>
