--- a/SailScores.Web/Scripts/tsconfig.json
+++ b/SailScores.Web/Scripts/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "allowSyntheticDefaultImports": true,
     "outDir": "./build/",
     "noImplicitAny": true,
     "noEmitOnError": true,
@@ -17,9 +18,7 @@
   "files": [
     "./guid.ts",
     "./raceEditor.ts",
-    "./interfaces/CompetitorDto.cs.d.ts",
-    "./jquery.autocomplete.d.ts",
-    "./bootstrap-select.d.ts"
+    "./interfaces/CompetitorDto.cs.d.ts"
   ],
   "compileOnSave": true
   }
