--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,3 +42,4 @@ steps:
     appType: 'webAppLinux'
     WebAppName: 'SailScores'
     packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
+    RuntimeStack: 'DOTNETCORE|3.1'
