--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,11 +19,11 @@ steps:
   inputs:
     packageType: 'sdk'
     version: '3.x'
-- task: NuGetToolInstaller@1
+#- task: NuGetToolInstaller@1
 
-- task: NuGetCommand@2
-  inputs:
-    restoreSolution: '$(solution)'
+#- task: NuGetCommand@2
+#  inputs:
+#    restoreSolution: '$(solution)'
 
 - task: Npm@1
   inputs:
