--- a/SailScores.Web/package.json
+++ b/SailScores.Web/package.json
@@ -14,7 +14,8 @@
     "merge-stream": "2.0.0",
     "rimraf": "3.0.0",
     "ts-loader": "6.2.1",
-    "typescript": "3.7.4"
+    "typescript": "3.7.4",
+    "webpack-stream": "5.2.1"
   },
   "dependencies": {
     "bootstrap": "4.4.1",
