--- a/SailScores.Web/package.json
+++ b/SailScores.Web/package.json
@@ -11,6 +11,7 @@
     "gulp-sass": "4.0.2",
     "gulp-uglify": "3.0.2",
     "gulp-uglify-es": "2.0.0",
+    "vinyl-named": "1.1.0",
     "merge-stream": "2.0.0",
     "rimraf": "3.0.0",
     "ts-loader": "6.2.1",
