--- a/SailScores.Web/appsettings.json
+++ b/SailScores.Web/appsettings.json
@@ -24,11 +24,8 @@
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
   },
   "EmailConfiguration": {
-    "SmtpServer": "mailserver",
-    "SmtpPort": 25,
-    "SmtpFromAddress": "info@sailscores.com",
-    "SmtpUserName": "info@sailscores.com",
-    "SmtpPassword": "password"
+    "FromAddress": "info@sailscores.com",
+    "SendGridApiKey": "1234567890"
   },
   "NotificationEmail": "info@sailscores.com"
 
