--- a/SailScores.Web/package.json
+++ b/SailScores.Web/package.json
@@ -9,11 +9,9 @@
     "gulp-clean-css": "4.2.0",
     "gulp-concat": "2.6.1",
     "gulp-sass": "4.0.2",
-    "gulp-uglify": "3.0.2",
-    "gulp-uglify-es": "2.0.0",
+    "del": "5.1.0",
     "vinyl-named": "1.1.0",
     "merge-stream": "2.0.0",
-    "rimraf": "3.0.0",
     "ts-loader": "6.2.1",
     "typescript": "3.7.4",
     "webpack-stream": "5.2.1"
