--- a/SailScores.Web/package.json
+++ b/SailScores.Web/package.json
@@ -10,6 +10,7 @@
     "gulp-clean-css": "4.2.0",
     "gulp-concat": "2.6.1",
     "gulp-sass": "4.0.2",
+    "gulp-rename": "2.0.0",
     "merge-stream": "2.0.0",
     "ts-loader": "6.2.1",
     "typescript": "3.7.4",
