--- a/SailScores.Web/package.json
+++ b/SailScores.Web/package.json
@@ -21,7 +21,8 @@
     "bootstrap": "4.4.1",
     "bootstrap-select": "1.13.12",
     "jquery": "3.4.1",
-    "jquery-validate": "2.0.0",
+    "jquery-validation": "1.19.1",
+    "jquery-validation-unobtrusive": "3.2.11",
     "jquery-ajax-unobtrusive": "3.2.6",
     "popper.js": "1.14.7",
     "dragula": "3.7.2",
