Start on Competitor Stats
Lots of temporary work here

--- a/SailScores.Web/appsettings.json
+++ b/SailScores.Web/appsettings.json
@@ -15,7 +15,7 @@
       {
         "Name": "MSSqlServer",
         "Args": {
-          "connectionString": "Server=localhost;Database=sailscores;User Id=sa;password=P@ssw0rd;MultipleActiveResultSets=true",
+          "connectionString": "DefaultConnection",
           "tableName": "Logs",
           "autoCreateSqlTable": true
         }
